--- a/Objects/STM32F446RE_Advanced_Embedded_Weather_Station.htm
+++ b/Objects/STM32F446RE_Advanced_Embedded_Weather_Station.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\Objects\STM32F446RE_Advanced_Embedded_Weather_Station.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\Objects\STM32F446RE_Advanced_Embedded_Weather_Station.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6180002: Last Updated: Sun Oct  8 12:44:25 2023
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6180002: Last Updated: Sun Oct  8 13:22:40 2023
 <BR><P>
 <H3>Maximum Stack Usage =         24 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -667,7 +667,7 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[6d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__rt_entry_main
 </UL>
 
-<P><STRONG><a name="[76]"></a>usart2Init</STRONG> (Thumb, 140 bytes, Stack size 0 bytes, main.o(.text.usart2Init))
+<P><STRONG><a name="[76]"></a>usart2Init</STRONG> (Thumb, 140 bytes, Stack size 0 bytes, serial_usart.o(.text.usart2Init))
 <BR><BR>[Called By]<UL><LI><a href="#[6e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
