--- a/I2C_PB8_PB9_v1/I2C_PB8_PB9_v1/MDK-ARM/I2C_PB8_PB9_v1/I2C_PB8_PB9_v1.build_log.htm
+++ b/I2C_PB8_PB9_v1/I2C_PB8_PB9_v1/MDK-ARM/I2C_PB8_PB9_v1/I2C_PB8_PB9_v1.build_log.htm
@@ -21,39 +21,30 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.9.0
 Dialog DLL:      TCM.DLL V1.56.1.0
  
 <h2>Project:</h2>
-C:\Users\andre\Documents\Personal_Projects_2022\I2C_PB8_PB9_v1\I2C_PB8_PB9_v1\MDK-ARM\I2C_PB8_PB9_v1.uvprojx
+C:\Users\andre\Documents\Personal_Projects_2022\Advanced_Embedded_Weather_Station\I2C_PB8_PB9_v1\I2C_PB8_PB9_v1\MDK-ARM\I2C_PB8_PB9_v1.uvprojx
 Project File Date:  11/05/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.18', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'I2C_PB8_PB9_v1'
-assembling startup_stm32f446xx.s...
-compiling stm32f4xx_it.c...
+../Core/Src/main.c(182): warning: passing 'char[16]' to parameter of type 'const uint8_t *' (aka 'const unsigned char *') converts between pointers to integer types where one is of the unique plain 'char' type and the other is not [-Wpointer-sign]
+                        HAL_UART_Transmit(&huart2, line1, strlen((char*)line1), HAL_MAX_DELAY);
+                                                   ^~~~~
+../Drivers/STM32F4xx_HAL_Driver/Inc\stm32f4xx_hal_uart.h(722): note: passing argument to parameter 'pData' here
+HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *huart, const uint8_t *pData, uint16_t Size, uint32_t Timeout);
+                                                                              ^
+../Core/Src/main.c(183): warning: passing 'char[16]' to parameter of type 'const uint8_t *' (aka 'const unsigned char *') converts between pointers to integer types where one is of the unique plain 'char' type and the other is not [-Wpointer-sign]
+                        HAL_UART_Transmit(&huart2, line2, strlen((char*)line1), HAL_MAX_DELAY);
+                                                   ^~~~~
+../Drivers/STM32F4xx_HAL_Driver/Inc\stm32f4xx_hal_uart.h(722): note: passing argument to parameter 'pData' here
+HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *huart, const uint8_t *pData, uint16_t Size, uint32_t Timeout);
+                                                                              ^
+2 warnings generated.
 compiling main.c...
-compiling stm32f4xx_hal_i2c_ex.c...
-compiling stm32f4xx_hal_msp.c...
-compiling stm32f4xx_hal_rcc.c...
-compiling stm32f4xx_hal_rcc_ex.c...
-compiling stm32f4xx_hal_flash_ex.c...
-compiling stm32f4xx_hal_flash.c...
-compiling stm32f4xx_hal_flash_ramfunc.c...
-compiling stm32f4xx_hal_gpio.c...
-compiling stm32f4xx_hal_i2c.c...
-compiling stm32f4xx_hal_dma_ex.c...
-compiling stm32f4xx_hal_dma.c...
-compiling stm32f4xx_hal_pwr.c...
-compiling stm32f4xx_hal_pwr_ex.c...
-compiling stm32f4xx_hal_cortex.c...
-compiling stm32f4xx_hal.c...
-compiling stm32f4xx_hal_exti.c...
-compiling stm32f4xx_hal_tim.c...
-compiling stm32f4xx_hal_tim_ex.c...
-compiling system_stm32f4xx.c...
-compiling stm32f4xx_hal_uart.c...
 linking...
-Program Size: Code=5228 RO-data=508 RW-data=12 ZI-data=1796  
+Program Size: Code=20130 RO-data=702 RW-data=12 ZI-data=1940  
 FromELF: creating hex file...
-"I2C_PB8_PB9_v1\I2C_PB8_PB9_v1.axf" - 0 Error(s), 0 Warning(s).
+"I2C_PB8_PB9_v1\I2C_PB8_PB9_v1.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -77,7 +68,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:09
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
