--- a/I2C_PB8_PB9_v1/I2C_PB8_PB9_v1/MDK-ARM/I2C_PB8_PB9_v1/I2C_PB8_PB9_v1.build_log.htm
+++ b/I2C_PB8_PB9_v1/I2C_PB8_PB9_v1/MDK-ARM/I2C_PB8_PB9_v1/I2C_PB8_PB9_v1.build_log.htm
@@ -22,29 +22,18 @@ Dialog DLL:      TCM.DLL V1.56.1.0
  
 <h2>Project:</h2>
 C:\Users\andre\Documents\Personal_Projects_2022\Advanced_Embedded_Weather_Station\I2C_PB8_PB9_v1\I2C_PB8_PB9_v1\MDK-ARM\I2C_PB8_PB9_v1.uvprojx
-Project File Date:  11/05/2023
+Project File Date:  12/02/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.18', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'I2C_PB8_PB9_v1'
-../Core/Src/main.c(204): warning: passing 'char[16]' to parameter of type 'const uint8_t *' (aka 'const unsigned char *') converts between pointers to integer types where one is of the unique plain 'char' type and the other is not [-Wpointer-sign]
-                        HAL_UART_Transmit(&huart2, line1, strlen((char*)line1), HAL_MAX_DELAY);
-                                                   ^~~~~
-../Drivers/STM32F4xx_HAL_Driver/Inc\stm32f4xx_hal_uart.h(722): note: passing argument to parameter 'pData' here
-HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *huart, const uint8_t *pData, uint16_t Size, uint32_t Timeout);
-                                                                              ^
-../Core/Src/main.c(205): warning: passing 'char[16]' to parameter of type 'const uint8_t *' (aka 'const unsigned char *') converts between pointers to integer types where one is of the unique plain 'char' type and the other is not [-Wpointer-sign]
-                        HAL_UART_Transmit(&huart2, line2, strlen((char*)line1), HAL_MAX_DELAY);
-                                                   ^~~~~
-../Drivers/STM32F4xx_HAL_Driver/Inc\stm32f4xx_hal_uart.h(722): note: passing argument to parameter 'pData' here
-HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *huart, const uint8_t *pData, uint16_t Size, uint32_t Timeout);
-                                                                              ^
-2 warnings generated.
+assembling startup_stm32f446xx.s...
+compiling stm32f4xx_hal_msp.c...
 compiling main.c...
 linking...
-Program Size: Code=19226 RO-data=702 RW-data=12 ZI-data=1940  
+Program Size: Code=7452 RO-data=508 RW-data=12 ZI-data=1796  
 FromELF: creating hex file...
-"I2C_PB8_PB9_v1\I2C_PB8_PB9_v1.axf" - 0 Error(s), 2 Warning(s).
+"I2C_PB8_PB9_v1\I2C_PB8_PB9_v1.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -68,7 +57,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
