--- a/I2C_PB8_PB9_v1/I2C_PB8_PB9_v1/MDK-ARM/I2C_PB8_PB9_v1/I2C_PB8_PB9_v1.build_log.htm
+++ b/I2C_PB8_PB9_v1/I2C_PB8_PB9_v1/MDK-ARM/I2C_PB8_PB9_v1/I2C_PB8_PB9_v1.build_log.htm
@@ -26,14 +26,37 @@ Project File Date:  12/02/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.18', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'I2C_PB8_PB9_v1'
+Rebuild target 'I2C_PB8_PB9_v1'
 assembling startup_stm32f446xx.s...
-compiling stm32f4xx_hal_msp.c...
+compiling HAL_i2c_rw_functions_BME280.c...
+../Core/Src/main.c(28): error: 'HAL_i2c_rw_functions_BME280.h' file not found
+#include "HAL_i2c_rw_functions_BME280.h"
+         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+1 error generated.
 compiling main.c...
-linking...
-Program Size: Code=7452 RO-data=508 RW-data=12 ZI-data=1796  
-FromELF: creating hex file...
-"I2C_PB8_PB9_v1\I2C_PB8_PB9_v1.axf" - 0 Error(s), 0 Warning(s).
+compiling stm32f4xx_it.c...
+compiling stm32f4xx_hal_msp.c...
+compiling stm32f4xx_hal_i2c_ex.c...
+compiling stm32f4xx_hal_rcc.c...
+compiling stm32f4xx_hal_flash.c...
+compiling stm32f4xx_hal_rcc_ex.c...
+compiling stm32f4xx_hal_flash_ramfunc.c...
+compiling stm32f4xx_hal_flash_ex.c...
+compiling stm32f4xx_hal_gpio.c...
+compiling stm32f4xx_hal_dma_ex.c...
+compiling stm32f4xx_hal_i2c.c...
+compiling stm32f4xx_hal_pwr.c...
+compiling stm32f4xx_hal_dma.c...
+compiling stm32f4xx_hal_pwr_ex.c...
+compiling stm32f4xx_hal_cortex.c...
+compiling stm32f4xx_hal.c...
+compiling stm32f4xx_hal_exti.c...
+compiling stm32f4xx_hal_tim.c...
+compiling stm32f4xx_hal_tim_ex.c...
+compiling system_stm32f4xx.c...
+compiling bme280.c...
+compiling stm32f4xx_hal_uart.c...
+"I2C_PB8_PB9_v1\I2C_PB8_PB9_v1.axf" - 1 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -57,7 +80,8 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:02
+Target not created.
+Build Time Elapsed:  00:00:05
 </pre>
 </body>
 </html>
